--- a/css/terminology.css
+++ b/css/terminology.css
@@ -1,6 +1,6 @@
 @import url("utils.css");
 /*
-   Author: Aaron Took
+   Author: Joseph Lefkovitz
    Date:   4/25/2022
    
    Filename: terminology.css
