--- a/css/base.css
+++ b/css/base.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 /*
-   Author: Aaron Took
+   Author: Joseph Lefkovitz
    Date:   4/25/2022
    
    Filename: base.css
@@ -17,7 +17,7 @@
 
 /* HTML and Body Styles */
 html {
-   /*height: 100%;*/
+   height: 100%;
    font-family: Verdana, Geneva, sans-serif;
    font-size: 12px;
    
@@ -165,6 +165,7 @@ body header div.navTop::after {
    display: table;
    clear: both;
 }
+
 /* Horizonal Navigation Styles */
 nav.horizontal {
    background-color: rgb(198,83,83);
@@ -209,12 +210,6 @@ ul.mainmenu > li a#active {
 ul.submenu {
    width: 100%;
    background-color: rgb(114,63,63);
-}
-
-/* Submenu2 Styles */
-ul.submenu2 {
-    width: 100%;
-    background-color: rgb(114,63,63);
 }
 
 /* Navicon Styles */
@@ -343,10 +338,6 @@ article p.welcomeMessage {
        text-align: left;
        text-indent:20px;
     }
-    nav.horizontal ul.submenu2 li {
-      text-align: left;
-      text-indent:40px;
-   }
    nav.horizontal ul#photoSubmenu li {
       text-align: left;
       text-indent:60px;
@@ -379,12 +370,6 @@ article p.welcomeMessage {
     a.submenuTitle:hover+ul.submenu, ul.submenu:hover {
         display: block;
     }
-    ul.submenu2 {
-        display: none;
-    }
-    a.submenuTitle2:hover+ul.submenu2, ul.submenu2:hover {
-        display: block;
-    }
     ul.mainmenu > li {
         float: left;
         position: relative;
@@ -394,15 +379,6 @@ article p.welcomeMessage {
         box-shadow: rgb(51,51,51) 5px 5px 15px;
         position: absolute;
         width: 100%;
-    }
-    ul.submenu2 {
-        box-shadow: rgb(51,51,51) 5px 5px 15px;
-        position: absolute;
-        width: 100%;
-        left:100%;
-        top:0%;
-        bottom: 0%;
-        float:right;
     }
 }
 /* =================================
