--- a/css/home.css
+++ b/css/home.css
@@ -1,15 +1,39 @@
 @charset "utf-8";
+@import url("utils.css");
 /*
-   Author: Aaron Took
+   Author: Joseph Lefkovitz
    Date:   4/25/2022
    
    Filename: home.css
    
-   This file contains the styles specifically for the home page of the AMAA website
+   This file contains the styles specifically for the home page of the AMAA website.
 
 */
 
-@import url("utils.css");
+/* Blockquote Styles */
+blockquote {
+    display: block;
+    width: 80%;
+    background-color:  rgb(198,83,83);
+    border: 4px solid rgb(114,49,49);
+    border-radius: 8px;
+    color:black;
+    margin-left: auto;
+    margin-right: auto;
+}
+blockquote p:first-of-type {
+    font-size: 20px;
+    line-height: 24px;
+    text-align: left;
+    text-indent: 10px;
+}
+blockquote p:nth-of-type(2) {
+    font-size:16;
+    line-height: 20px;
+    text-align: right;
+    position: inherit;
+    bottom:1;
+}
 
 /* Video Gallery Styles */
 div.videoContainer {
@@ -51,7 +75,7 @@ div.gallery {
     display: -moz-box;
     display: -ms-flexbox; 
     display: -webkit-flex;
-    display: flex; /* Standard syntax */
+    display: flex;
     height: auto;
     max-height: 180px;
 }
@@ -68,7 +92,7 @@ div.galleryItem {
     -ms-flexbox: 1;
     -webkit-flex: 1;
     -ms-flex: 1;
-    flex: 1; /* Standard syntax */
+    flex: 1;
 }
 div.galleryItem:hover {
     border: 1px solid #777;
@@ -83,8 +107,6 @@ div.galleryItem img {
 div.description {
     width:100%;
     margin: 15px;
-    /*padding: 15px;
-    display: block;*/
     text-align: center;
     vertical-align: bottom;
     margin-left: auto;
