--- a/css/schools.css
+++ b/css/schools.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 @import url("utils.css");
 /*
-   Author: Aaron Took
+   Author: Joseph Lefkovitz
    Date:   4/25/2022
    
    Filename: home.css
@@ -77,6 +77,7 @@ div#instructorGallery div.instructor img {
     max-width: 95%;
     border-radius: 4px;
     max-height:235px;
+    width: auto;
 }
 div#instructorGallery div.instructor::after {
    content: "";
@@ -94,6 +95,7 @@ div#instructorGallery div.instructorTwoWide img {
     max-width: 95%;
     border-radius: 4px;
     max-height:235px;
+    width: auto;
 }
 div.instructor2 {
     width: 100%;
@@ -125,6 +127,7 @@ div.instructor2Photo img {
     max-width: 95%;
     border-radius: 4px;
     max-height:235px;
+    width: auto;
 }
 p.instructorTitle {
     width: 33%;
