--- a/css/training-and-testing.css
+++ b/css/training-and-testing.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
+@import url("utils.css");
 /*
-   Author: Aaron Took
+   Author: Joseph Lefkovitz
    Date:   4/25/2022
    
    Filename: training-and-testing.css
@@ -26,6 +27,8 @@ article a.downloadTestingForm button, section a.downloadTestingForm button {
     margin-left: 1.6%;
     margin-right: 1.6%;
 }
+
+/* PDF Container Styles */
 div.pdfHolder {
     width: 100;
     display: block;
@@ -35,12 +38,12 @@ div.pdfHolder::after {
     display: table;
     clear: both;
 }
-
-
-/* =================================
-   Mobile Styles: 0px to 480px
-   =================================
-*/
-@media only screen and (max-width: 899px) {
-
+h2.sectionHeader {
+    float:none;
+    width: 100%;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
