--- a/css/utils.css
+++ b/css/utils.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 /*
-   Author: Aaron Took
+   Author: Joseph Lefkovitz
    Date:   4/25/2022
    
    Filename: utils.css
@@ -12,31 +12,8 @@
    Site Styles
    ===========
 */
-/* Blockquote Styles */
-blockquote {
-   display: block;
-   width: 80%;
-   background-color:  rgb(198,83,83);
-   border: 4px solid rgb(114,49,49);
-   border-radius: 8px;
-   color:black;
-   margin-left: auto;
-   margin-right: auto;
-}
-blockquote p:first-of-type {
-   font-size: 20px;
-   line-height: 24px;
-   text-align: left;
-   text-indent: 10px;
-}
-blockquote p:nth-of-type(2) {
-   font-size:16;
-   line-height: 20px;
-   text-align: right;
-   position: inherit;
-   bottom:1;
-}
 
+/* PDF Download Button Styles */
 article a.downloadPDF button, section a.downloadPDF button {
     cursor: pointer;
     width: 300px;
@@ -52,6 +29,8 @@ article a.downloadPDF button, section a.downloadPDF button {
     margin-left: 20px;
     margin-right: auto;
 }
+
+/* Regular list styles */
 ul.regList {
     width: 100%;
     list-style-type: disc;
@@ -77,36 +56,3 @@ h1.listTitle {
    font-size: 18px;
    line-height: 22px;
 }
-h2.sectionHeader {
-   float:none;
-   width: 100%;
-   font-size: 16px;
-   line-height: 20px;
-   text-align: center;
-   margin-top: 10px;
-   margin-bottom: 10px;
-}
-
-/* =================================
-   Mobile Styles: 0px to 480px
-   =================================
-*/
-
-@media only screen and (max-width: 899px) {
-
-}
-/* =================================
-   Tablet Styles: 481px and greater
-   =================================
-*/
-@media only screen and (min-width:900px) {
-
-}
-/* =================================
-   Desktop Styles: 769px and greater
-   =================================
-*/
-@media only screen and (min-width: 769px) {
-
-}
-
