--- a/css/base.css
+++ b/css/base.css
@@ -68,7 +68,7 @@ article::after, section::after {
 }
 article img, section img {
    display: block;
-   width: 100%;
+   /*width: 100%;*/
    max-width: 416px;
    margin-left: auto;
    margin-right: auto;
